# dotnet-bindgen

./: .gitignore  Cargo.toml  LICENCE  README.md
crates/dotnet-bindgen-cli/: Cargo.toml
crates/dotnet-bindgen-cli/src/: ast.rs  codegen.rs  csproj.rs  data.rs  main.rs  new_ast.rs  new_codegen.rs  path_ext.rs  platform.rs
crates/dotnet-bindgen-cli/src/passes/: entry.rs  format_level_0.rs  lower_level_2.rs  mod.rs
crates/dotnet-bindgen-cli/src/representations/: level_0.rs  level_1.rs  level_2.rs  mod.rs
crates/dotnet-bindgen-core/: Cargo.toml
crates/dotnet-bindgen-core/src/: lib.rs
crates/dotnet_bindgen_cli/: Cargo.toml
crates/dotnet_bindgen_cli/src/: main.rs
crates/dotnet_bindgen_core/: Cargo.toml
crates/dotnet_bindgen_core/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro-support/: Cargo.toml
crates/macro-support/src/: ast.rs  lib.rs
crates/macro/src/: lib.rs
crates/test-lib/: Cargo.toml
crates/test-lib/src/: lib.rs
crates/test_lib/: Cargo.toml
crates/test_lib/src/: lib.rs
src/: lib.rs
