[package]
name = "dotnet-bindgen"
version = "0.1.0"
authors = ["Joe Roberts <joe@jwjr.co.uk>"]
edition = "2018"

[dependencies]
dotnet-bindgen-macro = { path = "./crates/macro" }
dotnet-bindgen-core = { path = "./crates/dotnet-bindgen-core" }

[workspace]
members = [
    "crates/dotnet-bindgen-core",
    "crates/dotnet-bindgen-cli",
    "crates/test-lib",
    "crates/macro",
    "crates/macro-support",
]